--- a/.github/workflows/performance-test.yaml
+++ b/.github/workflows/performance-test.yaml
@@ -1,9 +1,7 @@
 name: Locust performance test
 
 on:
-  pull_request:
-    types:
-      - opened
+  push:
 jobs:
   build:
     runs-on: ubuntu-latest
