--- a/web_app/package.json
+++ b/web_app/package.json
@@ -17,6 +17,9 @@
   "devDependencies": {
     "@types/express": "^5.0.3",
     "@types/node": "^24.7.2",
+    "@types/pg": "^8.15.5",
+    "dotenv": "^17.2.3",
+    "pg": "^8.16.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
