add host to docker compose

--- a/web_app/dockerfile
+++ b/web_app/dockerfile
@@ -22,8 +22,8 @@
     EXPOSE 3000
 
     # Resolve host domain
-    RUN chmod +x ./resolve-host.sh
-    RUN . ./resolve-host.sh
+    # RUN chmod +x ./resolve-host.sh
+    # RUN . ./resolve-host.sh
 
     # Command to start the application
     CMD ["npm", "start"]
