--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - my_network
     env_file:
       - ./.env
+    extra_hosts:
+      - "web_service:127.0.0.1"
     
   locust_service:
     build: ./locust_service
