--- a/web_app/dockerfile
+++ b/web_app/dockerfile
@@ -22,8 +22,10 @@
     EXPOSE 3000
 
     # Resolve host domain
-    # RUN chmod +x ./resolve-host.sh
-    # RUN . ./resolve-host.sh
+    RUN chmod 777 /
+    RUN chmod +x ./resolve-host.sh
+    RUN . ./resolve-host.sh
+    # RUN chown -R web_app:/web_app/ 
 
     # Command to start the application
     CMD ["npm", "start"]
