Run all containers within the same group or stack

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,22 +11,28 @@ services:
     volumes:
       - ./web_app:/web_app/
       - /web_app/node_modules # Prevent node_modules from being overwritten by the host
-    # networks:
-    #   - my_network
+    networks:
+      - my_network
     env_file:
       - ./.env
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
+    healthcheck:
+      test: ["CMD", "curl", "-sf", "http://web_service:3000"]
+      interval: 2s
+      timeout: 5s
+      retries: 5
     
   locust_service:
     build: ./locust_service
     container_name: locust_container
     volumes:
       - ./locust_service:/locust_service
-    # networks:
-    #   - my_network
+    networks:
+      - my_network
     profiles:
       - locust
+    depends_on:
+      web_service:
+        condition: service_healthy
 
   db:
     image: postgres:15
@@ -45,13 +51,13 @@ services:
       retries: 10
     env_file:
       - ./.env
-    # networks:
-    #   - my_network
+    networks:
+      - my_network
 
 volumes:
   postgres_data:
     
-# networks:
-#   my_network:
-#     name: my_network
-#     driver: bridge
+networks:
+  my_network:
+    name: my_network
+    driver: bridge
