--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,7 +45,7 @@ services:
     ports:
       - "5432:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -h 0.0.0.0 -p 5432 -U db_user -d web_app_db"]
+      test: ["CMD-SHELL", "pg_isready -p 5432 -U db_user -d web_app_db"]
       interval: 10s
       timeout: 5s
       retries: 10
