--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,8 @@ services:
     environment:
       - DATABASE_URL="postgresql://${POSTGRESQL_USER}:${POSTGRESQL_PW}@db:5432/${DB_NAME}"
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     volumes:
       - ./web_app:/web_app/
       - /web_app/node_modules # Prevent node_modules from being overwritten by the host
@@ -46,7 +47,7 @@ services:
       - "5432:5432"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -p 5432 -U db_user -d web_app_db"]
-      interval: 10s
+      interval: 1s
       timeout: 5s
       retries: 10
     env_file:
