--- a/web_app/package.json
+++ b/web_app/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/app.js",
-    "dev": "ts-node ./app.ts"
+    "dev": "ts-node ./app.ts",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -16,10 +17,15 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.7.2",
     "@types/pg": "^8.15.5",
+    "@types/supertest": "^6.0.3",
     "dotenv": "^17.2.3",
+    "jest": "^29.7.0",
     "pg": "^8.16.3",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
