Only run on push from web_app changes

--- a/.github/workflows/performance-test.yaml
+++ b/.github/workflows/performance-test.yaml
@@ -1,7 +1,9 @@
 name: Locust performance test
 
 on:
-  push
+  push:
+    paths:
+      - 'web_app/**'
 jobs:
   build:
     runs-on: ubuntu-latest
